--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -37,28 +37,33 @@
                 android:layout_height="wrap_content"
                 xmlns:android="http://schemas.android.com/apk/res/android" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_gravity="center">
 
                 <Button
                     android:id="@+id/trailer_button"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
                     android:text="@string/play_trailer" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/FAButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="0dp"
+                    android:layout_toEndOf="@+id/trailer_button"
+                    android:layout_toRightOf="@id/trailer_button"
                     android:elevation="6dp"
                     android:src="@drawable/watchlist" />
-            </LinearLayout>
+            </RelativeLayout>
 
 
 
@@ -85,23 +90,27 @@
                 </NumberPicker>
 
             </RelativeLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/similar_movies"
+                android:layout_gravity="center"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/similar_movies"
+                android:textColor="@color/colorAccent"
                 android:textSize="24sp"
-                android:layout_gravity="center"
-                />
+                android:textStyle="bold" />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/details_recRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
                 >
             </android.support.v7.widget.RecyclerView>
+
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -110,69 +119,177 @@
                 android:text="@string/movie_info"
                 android:textSize="24sp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/taglineBase_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="22sp"
+                    android:text="@string/tagline"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/tagline_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/runTimeBase_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="22sp"
+                    android:text="@string/runtime"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/runtime_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/budgetBase_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="22sp"
+                    android:text="@string/budget"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/budget_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tagline_textView"
+                android:id="@+id/revenueBase_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
                 android:layout_marginLeft="8dp"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:id="@+id/runtime_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_marginLeft="8dp"
-                android:layout_marginBottom="8dp"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:id="@+id/budget_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_marginLeft="8dp"
-                android:layout_marginBottom="8dp"
-                android:textSize="18sp"/>
+                android:textSize="22sp"
+                android:text="@string/revenue"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/revenue_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
                 android:textSize="18sp"/>
 
-            <TextView
-                android:id="@+id/date_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:textSize="18sp"/>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/genre_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:textSize="18sp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/overview_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/dateBase_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="22sp"
+                    android:text="@string/release_date"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/date_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/genreBase_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="22sp"
+                    android:text="@string/genre"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/genre_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/overviewBase_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="22sp"
+                    android:text="@string/overview"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/overview_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/details_recyclerView"
