--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parentLayout"
-    android:background="#01d277">
+    android:background="@color/colorMovieDBgreen">
 
 
     <!--Use the circular image view dependency-->
@@ -26,8 +26,7 @@
                 android:id="@+id/circularImageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/logo"
-                android:padding="0dp"/>
+                android:src="@drawable/logo"/>
 
             <TextView
                 android:id="@+id/imageName"
