--- a/app/src/main/res/layout/recommendation_listitem.xml
+++ b/app/src/main/res/layout/recommendation_listitem.xml
@@ -3,9 +3,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_margin="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rec_layout">
+    android:id="@+id/rec_layout"
+    android:background="@color/colorMovieDBgreen"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
@@ -13,22 +14,26 @@
         android:layout_centerHorizontal="true"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="6dp"
-        card_view:cardUseCompatPadding="true">
+        card_view:cardUseCompatPadding="true"
+        android:layout_margin="3dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/poster_imageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/logo"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                />
 
             <TextView
                 android:id="@+id/rec_textView"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="20dp"
                 android:layout_below="@+id/poster_imageView"
                 android:text="test"
