--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -22,7 +22,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/detailsLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 tools:context=".MovieDetails">
 
@@ -53,9 +53,8 @@
                         style="@style/Widget.AppCompat.Button.Colored"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
                         android:layout_gravity="start"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:text="@string/play_trailer"
                         android:textStyle="bold" />
@@ -65,9 +64,7 @@
                         style="@style/Widget.AppCompat.Button.Colored"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/rate"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -76,19 +73,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
                     android:text="@string/similar_movies"
                     android:textColor="@color/colorAccent"
-                    android:textSize="24sp"
+                    android:textSize="36sp"
                     android:textStyle="bold" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/details_recRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
+                    android:orientation="horizontal">
+
+                </android.support.v7.widget.RecyclerView>
 
 
                 <TextView
@@ -99,7 +98,7 @@
                     android:layout_marginBottom="16dp"
                     android:text="@string/movie_info"
                     android:textColor="@color/colorAccent"
-                    android:textSize="24sp"
+                    android:textSize="36sp"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -110,7 +109,7 @@
                         android:id="@+id/taglineBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/tagline"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -120,7 +119,7 @@
                         android:id="@+id/tagline_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -134,7 +133,7 @@
                         android:id="@+id/runTimeBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/runtime"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -144,7 +143,7 @@
                         android:id="@+id/runtime_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -158,7 +157,7 @@
                         android:id="@+id/budgetBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/budget"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -168,7 +167,7 @@
                         android:id="@+id/budget_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -182,7 +181,7 @@
                         android:id="@+id/revenueBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/revenue"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -192,7 +191,7 @@
                         android:id="@+id/revenue_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -206,7 +205,7 @@
                         android:id="@+id/dateBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/release_date"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -216,7 +215,7 @@
                         android:id="@+id/date_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -230,7 +229,7 @@
                         android:id="@+id/genreBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/genre"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -240,7 +239,7 @@
                         android:id="@+id/genre_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -248,13 +247,14 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/overviewBase_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="@string/overview"
                         android:textColor="#000"
                         android:textSize="22sp"
@@ -264,7 +264,7 @@
                         android:id="@+id/overview_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:textColor="#000"
                         android:textSize="18sp" />
 
@@ -279,15 +279,16 @@
                     android:layout_marginBottom="2dp"
                     android:text="@string/cast"
                     android:textColor="@color/colorAccent"
-                    android:textSize="24sp"
+                    android:textSize="36sp"
                     android:textStyle="bold" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/details_recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:orientation="vertical"></android.support.v7.widget.RecyclerView>
+                    android:orientation="vertical">
+
+                </android.support.v7.widget.RecyclerView>
 
 
             </LinearLayout>
@@ -297,7 +298,7 @@
             android:id="@+id/FAButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:src="@drawable/watchlist"
             app:layout_anchor="@id/details_scrollview"
