--- a/app/src/main/res/layout/activity_watch_list_display.xml
+++ b/app/src/main/res/layout/activity_watch_list_display.xml
@@ -20,13 +20,11 @@
             layout="@layout/my_toolbar"/>
 
 
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/watch_list_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            >
+            android:layout_height="match_parent">
+
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
