--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -13,20 +13,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="6dp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="1dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="0dp"
+        card_view:cardUseCompatPadding="false">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="3dp">
+            android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/circularImageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/logo"/>
+                android:src="@drawable/logo" />
 
             <TextView
                 android:id="@+id/imageName"
