--- a/app/src/main/res/layout/recommendation_listitem.xml
+++ b/app/src/main/res/layout/recommendation_listitem.xml
@@ -12,33 +12,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_margin="2dp"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="6dp"
-        card_view:cardUseCompatPadding="true"
-        android:layout_margin="3dp"
-        >
+        card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/poster_imageView"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/logo"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
-                />
+                android:src="@drawable/logo" />
 
             <TextView
                 android:id="@+id/rec_textView"
                 android:layout_width="80dp"
                 android:layout_height="20dp"
                 android:layout_below="@+id/poster_imageView"
-                android:text="test"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
+                android:text="test"
 
                 />
         </RelativeLayout>
